--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
           Juntos enfrentan los horrores de un mundo postapocalíptico 
           mientras desarrollan una relación profundamente humana.</h2>
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTj1Krjx5ZmJ-pbKJ7M9XMfj9kEvlIvbichJg&s" alt="">
+
+          <div>The Legend of Zelda: Breath of the Wild (2017)
+            Link despierta después de un largo sueño en un vasto mundo abierto y destruido. Guiado por la Princesa Zelda, 
+            debe detener a Ganon, un antiguo mal que amenaza con destruir Hyrule. El jugador explora libremente el mundo, 
+            resolviendo acertijos y derrotando enemigos para restaurar el equilibrio.</div>
+<img src="https://assets.nintendo.com/image/upload/c_fill,w_1200/q_auto:best/f_auto/dpr_2.0/ncom/software/switch/70010000000025/7137262b5a64d921e193653f8aa0b722925abc5680380ca0e18a5cfd91697f58" alt="">
+
+
+
 </body>
 </html>
